Bug 249733 - ABI breakage in svn r1168104
Summary: ABI breakage in svn r1168104
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-01 12:10 UTC by Adrian von Bidder
Modified: 2010-09-01 18:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrian von Bidder 2010-09-01 12:10:50 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

libkwebkit1 breaks the ABI without increasing the soname in svn r1168104:

constructor "KWebKitPart::KWebKitPart(QWidget*, QObject*, QStringList const&)" disappears and is replaced by "KWebKitPart::KWebKitPart(QObject*, QWidget*, QString const&, QStringList const&)"

While it's ok to add new symbols, existing symbols shouldn't disappear.  Since libkwebkit1 is used by (at least) kget, this is an important issue.  (I noticed since Debian's packaging script automatically complain.)

If this is an internal symbol and shouldn't be public, please mark it as such and don't export it in the shared library.

thanks
your friendly Debian packager :-)

Reproducible: Always

Steps to Reproduce:
compile the shared library
Comment 1 Adrian von Bidder 2010-09-01 12:11:29 UTC
Start of svn diff:

Index: kwebkitpart.cpp
===================================================================
--- kwebkitpart.cpp     (revision 1168103)
+++ kwebkitpart.cpp     (revision 1168104)
@@ -58,9 +58,11 @@
    return 0;
 }
 
-KWebKitPart::KWebKitPart(QWidget *parentWidget, QObject *parent, const QStringList &/*args*/)
+KWebKitPart::KWebKitPart(QObject *parent, QWidget *parentWidget,
+                         const QString& historyFile, const QStringList& args)
             :KParts::ReadOnlyPart(parent), d(new KWebKitPartPrivate(this))
 {
Comment 2 Dawit Alemayehu 2010-09-01 18:34:39 UTC
SVN commit 1170614 by adawit:

- Let us be nice to our "friendly Debian packager" and fix the ABI breakage.

BUG:249733


 M  +4 -4      kwebkitpart.cpp  
 M  +1 -2      kwebkitpart.h  
 M  +2 -1      kwebkitpartfactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170614