- Let us be nice to our "friendly Debian packager" and fix the ABI breakage.

BUG:249733